feat: funcionalidad de pagar la deuda con tarjeta. pago-deuda.component, tarjeta-form.component, user.service

--- a/Films/src/app/components/pago-deuda/pago-deuda.component.html
+++ b/Films/src/app/components/pago-deuda/pago-deuda.component.html
@@ -1,41 +1,92 @@
-<div>Deuda de <div *ngIf = "user">{{user.firstName}}</div>
-<div *ngIf = "!user">USUARIO NO ENCONTRADO</div>
+<div>Deuda de <div *ngIf="user">{{user.firstName}}</div>
+  <div *ngIf="!user">USUARIO NO ENCONTRADO</div>
 </div>
 <div>
-    {{deuda}}
-    <button *ngIf = "payDeuda && deuda != 0" (click) = "toggleSaldarDeuda()">
-        Saldar Deuda
-    </button>
+  {{deuda}}
+  <button *ngIf="payDeuda && deuda != 0" (click)="toggleSaldarDeuda()">
+    Saldar Deuda
+  </button>
 
-    <div *ngIf = "saldarDeuda">
-        <button (click) = "pagoEfectivo()">Pago en Efectivo</button>
-        <div class="alert alert-success mt-3" *ngIf="successMessage">
-            {{ successMessage }}
-        </div>
-        <button (click) = "pagoTarjeta()">Pago con Tarjeta</button>
-        <div *ngIf = "hadCard">
-            <div>Desea pagar con la tarjeta cargada?</div>
-            <div class="tarjeta">
-                <div class="chip"></div>
-                <div class="box-datos">
-                  <p class="dato-tarjeta nTarjeta"> **** **** **** {{lastFourDigits}}</p>
-                </div>
-                <div class="box-datos">
-                  <p class="dato-tarjeta vencimiento">{{ user?.tarjeta?.fechaVencimiento }}</p>
-                </div>
-                <div class="last-data">
-                  <div class="box-fullname">
-                    <div class="box-datos">
-                      <p class="dato-tarjeta fullname">{{user?.tarjeta?.firstName}}</p>
-                    </div>
-                    <div class="box-datos">
-                      <p class="dato-tarjeta fullname">{{user?.tarjeta?.lastName}}</p>
-                    </div>
-                  </div>
-                  <div class="dato-tarjeta tipo-tarjeta"><img [ngClass]="imgTypeCardClass" src="{{typeCard}}" alt=""></div>
-                </div>
-              </div>
-        </div>
-
+  <div *ngIf="saldarDeuda">
+    <button (click)="pagoEfectivo()">Pago en Efectivo</button>
+    <div class="alert alert-success mt-3" *ngIf="successMessage">
+      {{ successMessage }}
     </div>
+    <button (click)="pagoTarjeta()">Pago con Tarjeta</button>
+    <div *ngIf="hadCard && pressButtonCard">
+      <div>Desea pagar con la tarjeta cargada?</div>
+      <div class="tarjeta">
+        <div class="chip"></div>
+        <div class="box-datos">
+          <p class="dato-tarjeta nTarjeta"> **** **** **** {{lastFourDigits}}</p>
+        </div>
+        <div class="box-datos">
+          <p class="dato-tarjeta vencimiento">{{ user?.tarjeta?.fechaVencimiento }}</p>
+        </div>
+        <div class="last-data">
+          <div class="box-fullname">
+            <div class="box-datos">
+              <p class="dato-tarjeta fullname">{{user?.tarjeta?.firstName}}</p>
+            </div>
+            <div class="box-datos">
+              <p class="dato-tarjeta fullname">{{user?.tarjeta?.lastName}}</p>
+            </div>
+          </div>
+          <div class="dato-tarjeta tipo-tarjeta"><img [ngClass]="imgTypeCardClass" src="{{typeCard}}" alt=""></div>
+        </div>
+      </div>
+      <div class="box-options">
+        <button id="newCard" class="button" (click)="showFormToAddNewCard()">Agregar una nueva</button>
+        <button id="yes" class="button" (click) = "showFormSecurityCode()">Si</button>
+        <button class="button cancel" (click)="navegar(user!.id)">Cancelar pago</button>
+      </div>
+    </div>
+
+    <div *ngIf = "!hadCard && pressButtonCard">
+      <div class="card-is-empty">
+        <div>
+          <h4 class="guide">Necesita una tarjeta para continuar la operacion</h4>
+          <button class="button" (click)="showFormToAddNewCard()">Agregar una tarjeta</button>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="showFormNewCard">
+      <div class="tarjeta-form-overlay">
+        <button class="cancel-form" (click)="hideFormToAddNewCard()">X</button>
+        <app-tarjeta-form></app-tarjeta-form>
+      </div>
+    </div>
+
+    <div class="box-cvc" *ngIf="showFormCVC">
+      <div class="box-content-cvc">
+        <div class="box-field">
+          <p class="field">Ingrese el codigo de seguridad de su tarjeta</p>
+          <form action="" [formGroup]="cvcFormGroup" class="form">
+            <input class="input-cvc" type="number" placeholder="CVC" formControlName="cvc">
+          </form>
+        </div>
+    
+        <div class="box-errors">
+          <div class="box-error" *ngIf="cvc && (cvc.invalid && (cvc.dirty || cvc.touched))">
+            <div *ngIf="cvc.hasError('required')">El codigo de seguridad es requerido.</div>
+            <div *ngIf="cvc.hasError('validarCVCLongitud')">El codigo de seguridad es de 3 digitos.</div>
+            <div *ngIf="cvc.hasError('soloNumeros')">Solo se permiten numeros.</div>
+          </div>
+        </div>
+    
+        <div *ngIf="cvcFormGroup.valid">
+          <form (ngSubmit)="buyWithActualCard()">
+            <button class="btn btn-primary margenBoton" type="submit">Confirmar compra</button>
+          </form>
+        </div>
+      </div>
+    
+      <div *ngIf="isLoading" class="loading-overlay">
+        <div class="loading-content">
+          <div class="spinner"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
