--- a/Films/src/app/components/login/login.component.html
+++ b/Films/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
           <h2 class="card-title mb-4 text-center">INICIAR SESIÓN</h2>
           <form class="needs-validation" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <div class="form-group mb-4">
-              <label for="email" class="label-spacing">Email</label>
+              <label for="email" class="label-spacing label">Email</label>
               <input 
                 type="text" 
                 class="form-control no-border input" 
