fix: arregle que muestre los mensajes de error en login/register. Ademas, agregue la validacion del dominio del email en login/register

--- a/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
+++ b/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
@@ -2,7 +2,7 @@
     <div class="box-categories" (mouseover)="showCategories()" (mouseleave)="hideCategories()">
         <div class="box-information-categories">
             <button class="option-categories">
-                <p>Categories</p>
+                <p>Categorias</p>
                 <img class="img-arrow" src="/assets/arrow_drop_down.png" alt="">
             </button>
         </div>
@@ -32,7 +32,7 @@
     </div>
 
     <div class="box-offers">
-        <button class="button" (click)="navegar('ofertas')">Offers</button>
+        <button class="button" (click)="navegar('ofertas')">Ofertas</button>
     </div>
 
     <div *ngIf = "isLoggedIn">
