--- a/Films/src/app/components/register/register.component.html
+++ b/Films/src/app/components/register/register.component.html
@@ -12,16 +12,16 @@
                 <label for="firstName" class="form-label label-spacing">Nombre</label>
                 <input type="text" class="form-control no-border input" id="firstName" name="firstName" formControlName="firstName" placeholder="Ingrese su nombre" required>
                 <span class="text-danger" *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)">
-                  <div *ngIf="firstName?.hasError('required')">El nombre es requerido</div>
-                  <div *ngIf="firstName?.hasError('soloLetras')">El nombre debe contener solo letras</div>
+                  <div *ngIf="firstName?.hasError('required')">El nombre es requerido.</div>
+                  <div *ngIf="firstName?.hasError('soloLetras')">El nombre debe contener solo letras.</div>
                 </span>
               </div>
               <div class="col-md-6 mb-5">
                 <label for="lastName" class="form-label label-spacing">Apellido</label>
                 <input type="text" class="form-control no-border input" id="lastName" name="lastName" formControlName="lastName" placeholder="Ingrese su apellido" required>
                 <span class="text-danger" *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)">
-                  <div *ngIf="lastName?.hasError('required')">El apellido es requerido</div>
-                  <div *ngIf="lastName?.hasError('soloLetras')">El apellido debe contener solo letras</div>
+                  <div *ngIf="lastName?.hasError('required')">El apellido es requerido.</div>
+                  <div *ngIf="lastName?.hasError('soloLetras')">El apellido debe contener solo letras.</div>
                 </span>
               </div>
             </div>
@@ -32,17 +32,18 @@
                 <label for="dni" class="form-label label-spacing">DNI</label>
                 <input type="text" class="form-control no-border input" id="dni" name="dni" formControlName="DNI" placeholder="Ingrese su DNI" required>
                 <span class="text-danger" *ngIf="dni?.invalid && (dni?.dirty || dni?.touched)">
-                  <div *ngIf="dni?.hasError('required')">El DNI es requerido</div>
-                  <div *ngIf="dni?.hasError('soloNumeros')">El DNI debe contener solo números</div>
-                  <div *ngIf="dni?.hasError('minlength') || dni?.hasError('maxlength')">El DNI debe contener 8 caracteres</div>
+                  <div *ngIf="dni?.hasError('required')">El DNI es requerido.</div>
+                  <div *ngIf="dni?.hasError('soloNumeros')">El DNI debe contener solo números.</div>
+                  <div *ngIf="dni?.hasError('minlength') || dni?.hasError('maxlength')">El DNI debe contener 8 caracteres.</div>
                 </span>
               </div>
               <div class="col-md-6 mb-5">
                 <label for="email" class="form-label label-spacing">Email</label>
                 <input type="email" class="form-control no-border input" id="email" name="email" formControlName="email" placeholder="Ingrese su email" required>
                 <span class="text-danger" *ngIf="email?.invalid && (email?.dirty || email?.touched)">
-                  <div *ngIf="email?.hasError('required')">El email es requerido</div>
-                  <div *ngIf="email?.hasError('email')">El formato del email es incorrecto</div>
+                  <div *ngIf="email?.hasError('required')">El email es requerido.</div>
+                  <div *ngIf="email?.hasError('email')">El formato del email es incorrecto.</div>
+                  <div *ngIf="email?.hasError('pattern')">Dominio incorrecto.</div>
                 </span>
               </div>
             </div>
@@ -53,7 +54,7 @@
                 <label for="address" class="form-label label-spacing">Dirección</label>
                 <input type="text" class="form-control no-border input" id="address" name="address" formControlName="address" placeholder="Ingrese su dirección" required>
                 <span class="text-danger" *ngIf="address?.invalid && (address?.dirty || address?.touched)">
-                  <div *ngIf="address?.hasError('required')">La dirección es requerida</div>
+                  <div *ngIf="address?.hasError('required')">La dirección es requerida.</div>
                 </span>
               </div>
               <div class="col-md-6 mb-5">
@@ -63,9 +64,9 @@
                   <button type="button" class="btn btn-link" (click)="toggleMostrarContrasena()"><i [ngClass]="mostrarContrasena ? 'bi bi-eye-slash' : 'bi bi-eye'"></i></button>
                 </div>
                 <span class="text-danger" *ngIf="password?.invalid && (password?.dirty || password?.touched)">
-                  <div *ngIf="password?.hasError('required')">La contraseña es requerida</div>
-                  <div *ngIf="password?.hasError('minDosNumeros')">La contraseña debe contener mínimo 2 números</div>
-                  <div *ngIf="password?.hasError('minlength')">La contraseña debe contener mínimo 6 caracteres</div>
+                  <div *ngIf="password?.hasError('required')">La contraseña es requerida.</div>
+                  <div *ngIf="password?.hasError('minDosNumeros')">La contraseña debe contener mínimo 2 números.</div>
+                  <div *ngIf="password?.hasError('minlength')">La contraseña debe contener mínimo 6 caracteres.</div>
                 </span>
               </div>
             </div>
