--- a/Films/src/app/components/navbar/navbar.component.html
+++ b/Films/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
     
     <div class="box-search-bar">
         <div class="items-for-search" [ngClass]="{ 'active': isFocused }">
-            <input [formControl]="formControl" class="search-bar" type="text" placeholder="Search..." (focus)="isFocused = true" (blur)="isFocused = false">
+            <input [formControl]="formControl" class="search-bar" type="text" placeholder="Buscar..." (focus)="isFocused = true" (blur)="isFocused = false">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="none">
               <style>@keyframes flipping{0%{transform:rotate3d(1,1,0,0deg)}to{transform:rotate3d(1,1,0,180deg)}}</style>
               <g style="animation:flipping 1.5s cubic-bezier(.96,-.2,0,1.29) both infinite alternate-reverse"><path fill="#ffff" fill-rule="evenodd" d="M5.71 11.025a5.25 5.25 0 1010.5 0 5.25 5.25 0 00-10.5 0zm5.25-7a7 7 0 100 14 7 7 0 000-14z" clip-rule="evenodd"/>
