fix: solucione bug que no te dejaba iniciar como admin, y problemas con el local storage del carrito, ordene mejor la deuda, aunque no esta terminada. auth.guard.ts, biblioteca.component, carrito.service, deuda.service, user.service

--- a/Films/src/app/components/biblioteca/biblioteca.component.html
+++ b/Films/src/app/components/biblioteca/biblioteca.component.html
@@ -55,6 +55,9 @@
   <div *ngIf = "deuda != 0" class="tiene-deuda">
     <p> Su deuda actual es de ${{deuda}} </p>
     <button class="button-deuda" (click)="pagarDeuda()">Pagar deuda</button>
+    <div class="alert alert-success mt-3 successMessage" *ngIf="successMessage">
+      {{ successMessage }}
+    </div>
   </div>
 </div>
 
