--- a/Films/src/app/components/ofertas-aux/ofertas-aux.component.css
+++ b/Films/src/app/components/ofertas-aux/ofertas-aux.component.css
@@ -165,6 +165,8 @@ table {
     width: 115px; /* Ancho que alcanza el botón al hacer hover */
     border-radius: 10%;
     background-color:aliceblue;
+    display: flex;
+    flex-direction: column;
 }
   
   /* Deslizar logo y mostrar precio */
@@ -203,3 +205,4 @@ table {
 .no-favourite .recuadroCelda{
     height: 400px;
 }
+  
