--- a/Films/src/app/components/inicio/inicio.component.html
+++ b/Films/src/app/components/inicio/inicio.component.html
@@ -1,2 +1,37 @@
 <app-alternative-options></app-alternative-options>
-<app-inicio-aux></app-inicio-aux>
+<section *ngIf="filteredFilms.length > 0" class="box">
+    <div class="box-title">
+      <h4 class="title">CATALOGO PRINCIPAL</h4>
+    </div>  
+    <div *ngFor="let group of getMovieGroups(filteredFilms)" class="box-group-films">
+        <div *ngFor="let film of group" class="recuadroCelda film" [ngClass]="{'no-favourite': isAdmin}">  
+          <div *ngIf = "!isAdmin">
+            <div class="box-star">
+              <button 
+                (click)="toggleFavourite(film)" 
+                class="button-star"
+              >
+                {{ isFavourite(film) ? '★' : '☆' }}
+              </button>
+            </div>
+          </div>
+          
+
+          <div class="box-img-title">
+            <img class="image" [src]="film.image" alt="Imagen no disponible">
+            <p class="title-text">{{film.title}}</p>
+          </div>
+
+          <div class="box-options">
+            <button class="button ficha-tecnica" (click)="navegarFilmDetail(film.rank)">Detalles</button>
+            
+            <div *ngIf = "isLoggedIn && !isAdmin">
+              <button class="button btn-carrito" (click)="agregarPeliculaAlCarrito(film)">
+                <img class="carrito-logo" src="/assets/carrito.png" alt="">
+                <span class="precio">$ {{ film.precio }}</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+</section>
