--- a/Films/src/app/components/tarjeta/tarjeta.component.html
+++ b/Films/src/app/components/tarjeta/tarjeta.component.html
@@ -4,23 +4,103 @@
     <div class="tarjeta">
       <div class="chip"></div>
       <div class="box-datos">
-        <p class="dato-tarjeta nTarjeta"> **** **** **** {{lastFourDigits}}</p>
+        <p class="dato-tarjeta nTarjeta" *ngIf="!permitirEditarTarjeta"> **** **** **** {{lastFourDigits}}</p>
+        <form class="formEditCard dato-tarjeta nTarjeta" action="#" [formGroup]="cardFormGroup" *ngIf="permitirEditarTarjeta">
+          <input id="numberCard" class="dato-tarjeta nTarjeta input-edit" type="text" formControlName="nTarjeta">
+        </form>
       </div>
       <div class="box-datos">
-        <p class="dato-tarjeta vencimiento">{{ usuarioActual?.tarjeta?.fechaVencimiento }}</p>
+        <p class="dato-tarjeta vencimiento" *ngIf="!permitirEditarTarjeta">{{ usuarioActual?.tarjeta?.fechaVencimiento }}</p>
+        <form class="formEditCard dato-tarjeta vencimiento" action="#" [formGroup]="cardFormGroup" *ngIf="permitirEditarTarjeta">
+          <input class="dato-tarjeta vencimiento input-edit" type="text" formControlName="fechaVencimiento">
+        </form>
       </div>
       <div class="last-data">
         <div class="box-fullname">
           <div class="box-datos">
-            <p class="dato-tarjeta fullname">{{usuarioActual?.tarjeta?.firstName}}</p>
+            <p class="dato-tarjeta fullname" *ngIf="!permitirEditarTarjeta">{{usuarioActual?.tarjeta?.firstName}}</p>
+            <form class="formEditCard dato-tarjeta" action="#" [formGroup]="cardFormGroup" *ngIf="permitirEditarTarjeta">
+              <input id="firstname" class="dato-tarjeta fullname-input input-edit firstname-edit" type="text" formControlName="firstName">
+            </form>
           </div>
           <div class="box-datos">
-            <p class="dato-tarjeta fullname">{{usuarioActual?.tarjeta?.lastName}}</p>
+            <p class="dato-tarjeta fullname" *ngIf="!permitirEditarTarjeta">{{usuarioActual?.tarjeta?.lastName}}</p>
+            <form class="formEditCard dato-tarjeta" action="#" [formGroup]="cardFormGroup" *ngIf="permitirEditarTarjeta">
+              <input id="lastname" class="dato-tarjeta fullname-input input-edit" type="text" formControlName="lastName">
+            </form>
           </div>
         </div>
         <div class="dato-tarjeta tipo-tarjeta"><img [ngClass]="imgTypeCardClass" src="{{typeCard}}" alt=""></div>
       </div>
     </div>
+  </div>
+  <div class="card-exist">
+    <button *ngIf="showOptionButtonsToCard" class="edit button-edit-tarjeta" (click)="toggleFormPassword()">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="28" height="28" fill="#121213">
+        <path d="M16.6256 3.1285L9.29145 10.4626L9.29886 14.7098L13.537 14.7024L20.8682 7.37114C21.5912 8.75438 22 10.3278 22 11.9967C22 17.5196 17.5228 21.9967 12 21.9967C6.47715 21.9967 2 17.5196 2 11.9967C2 6.47386 6.47715 1.9967 12 1.9967C13.6689 1.9967 15.2423 2.40553 16.6256 3.1285ZM20.4853 2.09721L21.8995 3.51142L12.7071 12.7038L11.2954 12.7063L11.2929 11.2896L20.4853 2.09721Z"></path>
+      </svg>
+    </button>
+
+    <div *ngIf="showFormularioPassword">
+      <div class="form-password">
+        <h5 class="field">Ingrese su contraseña para seguir</h5>
+        <div class="box-field">
+            <div class="box-input-password">
+              <input id="input-password"
+              name="password-edit-input" 
+              [(ngModel)]="passwordToEdit" 
+              [type]="showPassword ? 'text' : 'password'" 
+              placeholder="Contraseña..."
+              autocomplete="new-password">
+            </div>
+            <div class="box-eye">
+              <button 
+                type="button" 
+                class="btn btn-link" 
+                (click)="toggleShowPassword()">
+                <i [ngClass]="showPassword ? 'bi bi-eye-slash' : 'bi bi-eye'"></i>
+              </button>
+            </div>
+        </div>
+        <div class="box-options-password">
+          <button class="button" (click)="toggleFormPassword()">Cancelar</button>
+          <button class="button" (click)="verifyPassword()">Enviar</button>
+        </div>
+        <div class="box-error-card">
+          {{resultInputPassword}}
+        </div>
+      </div>
+    </div>
+
+    <div class="box-options-edit-card" *ngIf="activeOptionsEditCard">
+      <button id="button-cancel-edit-card" class="button-option-edit-card" (click)="cancelEditCard()">✖</button>
+      <button class="button-option-edit-card" (click)="confirmEditCard()">✔</button>
+    </div>
+
+    <div class="box-errors">
+      <section class="box-error-card" *ngIf="firstnameCard?.invalid && (firstnameCard?.dirty || firstnameCard?.touched)">
+          <div *ngIf="firstnameCard?.hasError('required')" class="error-message">El nombre es requerido.</div>
+          <div *ngIf="firstnameCard?.hasError('soloLetras')" class="error-message">El nombre debe contener solo letras.</div>
+      </section>
+  
+      <section class="box-error-card" *ngIf="lastnameCard?.invalid && (lastnameCard?.dirty || lastnameCard?.touched)">
+          <div *ngIf="lastnameCard?.hasError('required')" class="error-message"> El apellido es requerido.</div>
+          <div *ngIf="lastnameCard?.hasError('soloLetras')" class="error-message">El apellido debe contener solo letras.</div>
+      </section>
+  
+      <section class="box-error-card" *ngIf="numberCard && (numberCard.invalid && (numberCard.dirty || numberCard.touched))">
+          <div *ngIf="numberCard.hasError('required')" class="error-message">El Nº de tarjeta es requerido.</div>
+          <div *ngIf="numberCard.hasError('soloNumeros')" class="error-message">La tarjeta debe tener solo numeros. </div>
+          <div *ngIf="numberCard.hasError('validarTarjetaLongitud')" class="error-message">El Nº de tarjeta son 16 digitos.</div>
+      </section>
+      
+      <section class="box-error-card" *ngIf="fechaVencimientoCard && (fechaVencimientoCard.invalid && (fechaVencimientoCard.dirty || fechaVencimientoCard.touched))">
+          <div *ngIf="fechaVencimientoCard.hasError('required')">La fecha de vencimiento es requerida.</div>
+          <div *ngIf="fechaVencimientoCard.hasError('validarFormatoFechaVencimiento')">Formato fecha de vencimiento debe ser MM/YY.</div>
+          <div *ngIf="fechaVencimientoCard.hasError('validarFechaNoExpirada')">Tarjeta vencida.</div>
+      </section>
+    </div>
+    <div class="box-exito">{{resultEditCard}}</div>
   </div>
   <div class="show-buttons">
     <h4>Desea comprar con esta tarjeta?</h4>
