--- a/Films/src/app/components/tarjeta/tarjeta.component.css
+++ b/Films/src/app/components/tarjeta/tarjeta.component.css
@@ -179,7 +179,7 @@ h4{
     color: rgb(236, 32, 32);
 }
 
-.box-exito{
+.box-result{
     background-color: transparent;
     margin-top: 0.2rem;
     color: rgb(16, 119, 178);
