--- a/Films/src/app/components/tarjeta/tarjeta.component.html
+++ b/Films/src/app/components/tarjeta/tarjeta.component.html
@@ -100,7 +100,7 @@
           <div *ngIf="fechaVencimientoCard.hasError('validarFechaNoExpirada')">Tarjeta vencida.</div>
       </section>
     </div>
-    <div class="box-exito">{{resultEditCard}}</div>
+    <div class="box-result">{{resultEditCard}}</div>
   </div>
   <div class="show-buttons">
     <h4>Desea comprar con esta tarjeta?</h4>
