--- a/Films/src/app/components/pago-deuda/pago-deuda.component.css
+++ b/Films/src/app/components/pago-deuda/pago-deuda.component.css
@@ -169,8 +169,18 @@
     margin-bottom: 1rem;
 }
 
+.field-cvc{
+    text-align: center;
+    background-color: transparent;
+    color: aliceblue;
+    font-weight: 600;
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+}
+
 .box-field{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     padding: 0.2rem;
     justify-content: center;
     text-align: center;
@@ -311,6 +321,10 @@
     color: rgb(187, 187, 187);
 }
 
+.efectivo{
+    margin-right: 1rem;
+}
+
 .box-button-card{
     margin: 0%;
     padding: 0%;
@@ -325,7 +339,7 @@
     background-color: transparent;
     background-color: #545454;
     margin-block: 1rem;
-    margin-inline: 25rem;
+    margin-inline: 22rem;
 }
 
 .box-saldar-deuda-efectivo{
@@ -351,12 +365,19 @@
     background-color: transparent;
 }
 
+.box-paragraph{
+    display: flex;
+    justify-content: center;
+}
+
 .paragraph{
     text-align: center;
     color: aliceblue;
-    padding: 0.1rem;
+    padding: 0.3rem;
     background-color: #343434;
     font-size: 1.1rem;
+    width: max-content;
+    text-align: center;
 }
 
 .cancel-form{
@@ -371,4 +392,162 @@
     position: absolute; /* Posicionamiento absoluto dentro del contenedor */
     top: 10px; /* Ajusta la distancia desde la parte superior */
     right: 40px; /* Ajusta la distancia desde la parte derecha */
+}
+
+.box-opciones-pagar-deuda{
+    display: flex;
+    justify-content: center;
+    margin: 0%;
+    background-color: transparent;
+}
+
+.formEditCard{
+    margin: 0%;
+    background-color: transparent;
+    padding: 0%;
+}
+
+#numberCard{
+    width: 18rem;
+    text-align: center;
+    letter-spacing: 0.5rem;
+}
+
+.input-edit{
+    outline: none;
+    border: none;
+}
+
+.fullname-input{
+    width: 6.25rem;
+    padding-inline: 0.67rem;
+}
+
+.card-exist{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-block: 0.4rem;
+}
+
+.edit{
+    margin-left: 0.8rem;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+#button-cancel-edit-card{
+    margin-right: 0.8rem;
+}
+
+.button-option-edit-card,
+.button-edit-tarjeta{
+    border: none;
+    padding: 0.4rem;
+    cursor: pointer;
+    font-size: 1.2rem;
+    transition: border 0.3s ease, border-radius 0.3s ease;
+    border: 1px solid transparent;
+    background-color: rgb(130, 130, 130);
+    color: white;
+}
+
+.button-option-edit-card{
+    padding-inline: 0.7rem;
+}
+
+.button-option-edit-card:hover,
+.button-edit-tarjeta:hover{
+    background-color: rgb(164, 164, 164);
+    border-radius: 1rem;
+}
+
+.form-password{
+    position: fixed; /* Para que se mantenga en la pantalla */
+    top: 30%; /* Centra verticalmente */
+    left: 50%; /* Centra horizontalmente */
+    transform: translate(-50%, -50%); /* Ajusta el centro real */
+    z-index: 1000;
+    background-color: rgba(51, 51, 51, 0.8); 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    padding: 2rem; /* Espaciado alrededor del formulario */
+    border-radius: 10px;
+}
+
+.field{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    background-color: transparent;
+    color: aliceblue;
+    font-weight: 600;
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+}
+
+.box-field{
+    display: flex;
+    padding: 0.2rem;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 1.5rem;
+    background-color: transparent;
+}
+
+.box-input-password{
+    display: flex;
+    justify-content: center;
+    background-color: transparent;
+}
+
+#input-password{
+    display: flex;
+    justify-content: center;
+    margin-block: 0.2rem;
+    font-size: 1rem;
+    height: 2rem;
+    width: 12rem;
+    border: 0.1rem solid transparent;
+    outline: 0.1rem solid transparent;
+    border-radius: 0.5rem;
+    background-color: aliceblue;
+}
+
+#input-password::placeholder{
+    color: grey;
+    padding: 0.2rem;
+    background-color: aliceblue;
+}
+
+#input-password:focus{
+    color: grey;
+    padding: 0.2rem;
+    background-color: aliceblue;
+}
+
+.box-options-password{
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.box-error-card{
+    margin-top: 0.2rem;
+    color: rgb(205, 25, 25);
+}
+
+.box-errors{
+    background-color: transparent;
+    margin-top: 0.2rem;
+    color: rgb(236, 32, 32);
+}
+
+.box-result{
+    background-color: transparent;
+    margin-top: 0.2rem;
+    color: rgb(16, 119, 178);
 }
