style: modifique estilos de ingresar password para editar contraseña o tarjeta en perfil de user. Modifique el formulario para ingresar el cvc en el proceso de compra. Finalmente, modifique la alerta en film detail para cuando no se esta logueado o es admin y no se puede modificar o agregar reseñas

--- a/Films/src/app/components/film-detail/film-detail.component.css
+++ b/Films/src/app/components/film-detail/film-detail.component.css
@@ -147,8 +147,12 @@ h2{
 }
 
 .paragraph{
+    font-size: 1.2rem;
+    font-weight: 500;
     margin-block: 1rem;
-    color: aliceblue;
+    color: rgb(16, 119, 178);
+    padding: 0.4rem;
+    text-align: center;
 }
 
 .box-star{
