--- a/Films/src/app/components/tarjeta/tarjeta.component.html
+++ b/Films/src/app/components/tarjeta/tarjeta.component.html
@@ -44,7 +44,7 @@
     <div *ngIf="showFormularioPassword">
       <div class="form-password">
         <h5 class="field">Ingrese su contraseña para seguir</h5>
-        <div class="box-field">
+        <div class="box-field-password">
             <div class="box-input-password">
               <input id="input-password"
               name="password-edit-input" 
