--- a/Films/src/app/components/perfil/perfil.component.html
+++ b/Films/src/app/components/perfil/perfil.component.html
@@ -59,7 +59,7 @@
             </div>
           </div>
   
-          <div *ngIf="!showErrors && firstname_fc?.invalid && (firstname_fc?.dirty || firstname_fc?.touched)" class="errors">
+          <div *ngIf="firstname_fc?.invalid && (firstname_fc?.dirty || firstname_fc?.touched)" class="errors">
             <div *ngIf="firstname_fc?.hasError('required')" class="text-danger">El nombre es requerido</div>
             <div *ngIf="firstname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
           </div>
@@ -89,9 +89,9 @@
             </div>
           </div>
   
-          <div *ngIf="!showErrors && lastname_fc?.invalid && (lastname_fc?.dirty || lastname_fc?.touched)" class="errors">
+          <div *ngIf="lastname_fc?.invalid && (lastname_fc?.dirty || lastname_fc?.touched)" class="errors">
             <div *ngIf="lastname_fc?.hasError('required')" class="text-danger">El apellido es requerido</div>
-            <div *ngIf="firstname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
+            <div *ngIf="lastname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
           </div>
   
           <div id="resultado-operacion" class="mt-3">{{resultLastName}}</div>
@@ -118,9 +118,9 @@
             </div>
           </div>
   
-          <div *ngIf="!showErrors && lastname_fc?.invalid && (lastname_fc?.dirty || lastname_fc?.touched)" class="errors">
+          <div *ngIf="lastname_fc?.invalid && (lastname_fc?.dirty || lastname_fc?.touched)" class="errors">
             <div *ngIf="lastname_fc?.hasError('required')" class="text-danger">El apellido es requerido</div>
-            <div *ngIf="firstname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
+            <div *ngIf="lastname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
           </div>
   
           <div id="resultado-operacion" class="mt-3">{{resultLastName}}</div>
@@ -148,9 +148,11 @@
             </div>
           </div>
 
-          <div *ngIf="!showErrors && dni_fc?.invalid && (dni_fc?.dirty || dni_fc?.touched)" class="errors">
+          <div *ngIf="dni_fc?.invalid && (dni_fc?.dirty || dni_fc?.touched)" class="errors">
             <div *ngIf="dni_fc?.hasError('required')" class="text-danger">El DNI es requerido</div>
             <div *ngIf="dni_fc?.hasError('soloNumeros')" class="text-danger">DNI contiene solo numeros</div>
+            <div *ngIf="dni_fc?.hasError('minlength')" class="text-danger">Requiere un minimo de 8 digitos</div>
+            <div *ngIf="dni_fc?.hasError('maxlength')" class="text-danger">El maximo es de 8 digitos</div>
           </div>
 
           <div id="resultado-operacion" class="mt-3">{{resultDNI}}</div>
@@ -185,9 +187,10 @@
             </div>
           </div>
   
-          <div *ngIf="!showErrors && email_fc?.invalid && (email_fc?.dirty || email_fc?.touched)" class="errors">
+          <div *ngIf="email_fc?.invalid && (email_fc?.dirty || email_fc?.touched)" class="errors">
             <div *ngIf="email_fc?.hasError('required')" class="text-danger">El email es requerido</div>
             <div *ngIf="email_fc?.hasError('email')" class="text-danger">Formato de Email Incorrecto</div>
+            <div *ngIf="email_fc?.hasError('pattern')" class="text-danger">Dominio de Email Incorrecto</div>
           </div>
   
           <div id="resultado-operacion" class="mt-3">{{resultEmail}}</div>
@@ -216,9 +219,10 @@
             </div>
           </div>
   
-          <div *ngIf="!showErrors && email_fc?.invalid && (email_fc?.dirty || email_fc?.touched)" class="errors">
+          <div *ngIf="email_fc?.invalid && (email_fc?.dirty || email_fc?.touched)" class="errors">
             <div *ngIf="email_fc?.hasError('required')" class="text-danger">El email es requerido</div>
             <div *ngIf="email_fc?.hasError('email')" class="text-danger">Formato de Email Incorrecto</div>
+            <div *ngIf="email_fc?.hasError('pattern')" class="text-danger">Dominio de Email Incorrecto</div>
           </div>
   
           <div id="resultado-operacion" class="mt-3">{{resultEmail}}</div>
@@ -231,7 +235,7 @@
           <div class="box-1">
             <p *ngIf="!isEditingPassword" class="paragraph"> * * * * * * * * </p>
             <form action="#" [formGroup]="formGroupPassword">
-              <input type="password" class="edit-input" *ngIf="isEditingPassword" formControlName="password"/>
+              <input type="text" class="edit-input" *ngIf="isEditingPassword" formControlName="password"/>
             </form>
 
             <button class="edit" *ngIf="!isEditingPassword" (click)="toggleFormToEditPassword()">
@@ -276,7 +280,7 @@
             </div>
           </div>
 
-          <div *ngIf="!showErrors && password_fc?.invalid && (password_fc?.dirty || password_fc?.touched)" class="box-password">
+          <div *ngIf="password_fc?.invalid && (password_fc?.dirty || password_fc?.touched)" class="box-password">
             <div class="text-danger" *ngIf="password_fc?.hasError('required')">La contraseña es requerida</div>
             <div class="text-danger" *ngIf="password_fc?.hasError('minDosNumeros')">La contraseña debe contener mínimo 2 números</div>
             <div class="text-danger" *ngIf="password_fc?.hasError('minlength')">La contraseña debe contener mínimo 6 caracteres</div>
@@ -288,7 +292,7 @@
     </div>
   </section>
 
-<div *ngIf = "!isAdmin">
+  <div *ngIf = "!isAdmin">
     <section class="box-domicilios">
       <h3 class="sub-title">Domicilios</h3>
       <div class="container">
@@ -312,7 +316,7 @@
             </div>
           </div>
 
-          <div *ngIf="!showErrors && address_fc?.invalid && (address_fc?.dirty || address_fc?.touched)" class="errors">
+          <div *ngIf="address_fc?.invalid && (address_fc?.dirty || address_fc?.touched)" class="errors">
             <div *ngIf="address_fc?.hasError('required')" class="text-danger">La direccion es requerida</div>
           </div>
 
@@ -458,12 +462,12 @@
       </section>
       
       <section class="box-error" *ngIf="fechaVencimientoCard && (fechaVencimientoCard.invalid && (fechaVencimientoCard.dirty || fechaVencimientoCard.touched))">
-          <div *ngIf="fechaVencimientoCard.hasError('required')">La fecha de vencimiento es requerida.</div>
-          <div *ngIf="fechaVencimientoCard.hasError('validarFormatoFechaVencimiento')">Formato fecha de vencimiento debe ser MM/YY.</div>
-          <div *ngIf="fechaVencimientoCard.hasError('validarFechaNoExpirada')">Tarjeta vencida.</div>
+          <div *ngIf="fechaVencimientoCard.hasError('required')" class="error-message">La fecha de vencimiento es requerida.</div>
+          <div *ngIf="fechaVencimientoCard.hasError('validarFormatoFechaVencimiento')" class="error-message">Formato fecha de vencimiento debe ser MM/YY.</div>
+          <div *ngIf="fechaVencimientoCard.hasError('validarFechaNoExpirada')" class="error-message">Tarjeta vencida.</div>
       </section>
     </div>
-    <div class="box-errors box-error">{{resultEditCard}}</div>
+    <div id="resultado-operacion" class="mt-3">{{resultEditCard}}</div>
   </section>
 </div>
 
