--- a/Films/src/app/components/favourite-list/favourite-list.component.css
+++ b/Films/src/app/components/favourite-list/favourite-list.component.css
@@ -207,13 +207,13 @@
 }
 
 .box-empty{
+    border-radius: 0.2rem;
     padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: black;
-    background-color: rgb(190, 190, 190);
-    box-shadow: 0px 0px 0px 10px rgb(204, 204, 204);
+    color: aliceblue;
+    background-color: #747474;
     width: max-content;
     margin: 0 auto;
     margin-block: 4rem;
@@ -221,6 +221,6 @@
 
 .text-empty{
     margin: 0%;
-    font-size: 40px;
-    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.5rem;
 }
+
